feat: 调整导航字体颜色

--- a/templates/webstack/index.html
+++ b/templates/webstack/index.html
@@ -26,6 +26,12 @@
                 padding: 30px;
             }
         }
+        .user-info-navbar .user-info-menu>li>a, p, h4{
+            color: #1A1A17;
+        }
+        .user-info-navbar .user-info-menu>li>a:hover{
+            color: #ea6f5a;
+        }
     </style>
 {% endblock %}
 
