--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -37,6 +37,7 @@
                 {% url 'webstack:webstack_index' as webstack_index_url %}
                 {% url 'blog:feedhub' as feed_hub_url %}
                 {% url 'monitor:demo' as monitor_demo_url %}
+                {% url 'portinfo:index' as portinfo_url %}
                 <a class="nav-link dropdown-toggle py-md-3 {% if request.path == webstack_index_url or request.path == feed_hub_url or request.path == monitor_demo_url %}active{% endif %}"
                    href="#"
                    id="more-link"
@@ -54,6 +55,8 @@
                         <i class="fa fa-fw fa-rss-square text-info mr-2"></i>Feed Hub</a>
                     <a class="dropdown-item pl-3" href="{{ monitor_demo_url }}"><i
                                     class="fa fa-fw fa-tachometer text-info mr-2"></i>监控Demo</a>
+                    <a class="dropdown-item pl-3" href="{{ portinfo_url }}"><i
+                                    class="fa fa-fw fa-bullseye text-info mr-2"></i>端口大全</a>
                 </div>
             </li>
 
