style: 日常样式调整

--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -15,7 +15,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'blog:timeline' %}" target="_blank" title="查看网站建站历程">
+                <a href="{% url 'blog:timeline' %}" title="查看网站建站历程">
                     <img style="max-width:40px" alt="网站的建站历程" src="{% static 'blog/img/blog.png' %}">
                     <p class="mt-2">更新记录</p>
                 </a>
