--- a/apps/blog/templates/blog/subjectDetail.html
+++ b/apps/blog/templates/blog/subjectDetail.html
@@ -107,8 +107,7 @@
                         </li>
                         <li class="breadcrumb-item active d-none d-md-block" aria-current="page">
                             {% if user.is_superuser or user == article.author %}
-                                <a class="edit-blog" href="{% url 'blog:article_edit' article.slug %}"
-                                   target="_blank" title="编辑文章">
+                                <a class="edit-blog" href="{% url 'blog:article_edit' article.slug %}" title="编辑文章">
                                     {{ article.title|my_slice:":50" }}</a>
                             {% else %}
                                 {{ article.title|my_slice:":50" }}
