future: 监控面板支持全屏显示

--- a/apps/monitor/templates/monitor/base.html
+++ b/apps/monitor/templates/monitor/base.html
@@ -126,6 +126,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const myDiv = document.getElementById('monitor-box');
+            const originalPadding = myDiv.style.padding;
             // 监听键盘事件
             document.addEventListener('keydown', (event) => {
                 // 使用 Ctrl  + m 组合键进入全屏
@@ -153,23 +154,24 @@
                     }
                 }
 
-                // 按ESC键退出全屏
+                // 按 ESC 键退出全屏
                 if (event.key === 'Escape') {
                     if (document.exitFullscreen) {
                         document.exitFullscreen().then(() => {
-                            myDiv.style.setProperty('padding', '1rem', 'important');
+                            // 恢复退出全屏后的样式
+                            myDiv.style.padding = originalPadding;
                         });
                     } else if (document.mozCancelFullScreen) { // Firefox
                         document.mozCancelFullScreen().then(() => {
-                            myDiv.style.setProperty('padding', '1rem', 'important');
+                            myDiv.style.padding = originalPadding;
                         });
                     } else if (document.webkitExitFullscreen) { // Chrome, Safari and Opera
                         document.webkitExitFullscreen().then(() => {
-                            myDiv.style.setProperty('padding', '1rem', 'important');
+                            myDiv.style.padding = originalPadding;
                         });
                     } else if (document.msExitFullscreen) { // IE/Edge
                         document.msExitFullscreen().then(() => {
-                            myDiv.style.setProperty('padding', '1rem', 'important');
+                            myDiv.style.padding = originalPadding;
                         });
                     }
                 }
