--- a/apps/oauth/templates/oauth/tags/user_avatar.html
+++ b/apps/oauth/templates/oauth/tags/user_avatar.html
@@ -1,10 +1,14 @@
 {% load oauth_tags %}
-{% if user.socialaccount_set.exists and user.avatar.url == '/media/avatar/default.png' %}
+{% is_upload user.avatar.url as is_upload_flag %}
+{% if is_upload_flag %}
+    <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}-自定义图像">
+{% elif user.socialaccount_set.exists %}
     {% if ".sinaimg.cn" in user.socialaccount_set.all.0.get_avatar_url %}
-        <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}">
+        <img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}-第三方图像">
     {% else %}
-        <img class="avatar" src="{% http_to_https user.socialaccount_set.all.0.get_avatar_url %}" alt="{{ user }}">
+        <img class="avatar" src="{% http_to_https user.socialaccount_set.all.0.get_avatar_url %}" alt="{{ user }}-第三方图像">
     {% endif %}
 {% else %}
-<img class="avatar" src="{{ user.avatar.url }}" alt="{{ user }}">
+    {% avatar_media_to_static user.avatar.url as static_avatar_url %}
+    <img class="avatar" src="{{ static_avatar_url }}" alt="{{ user }}-默认图像">
 {% endif %}
