--- a/apps/blog/templates/blog/friend.html
+++ b/apps/blog/templates/blog/friend.html
@@ -51,6 +51,7 @@
                                 </a>
                             {% endfor %}
                         </div>
+                        <div class="text-center small" style="color: var(--izone-font-3);">失联友链为本站定时任务定期检测后标记的异常友链，一旦网站恢复，定时任务会自动恢复友链状态</div>
                     {% endif %}
                 </div>
             </div>
