feat: Base64编码/解码

--- a/apps/tool/templates/tool/base64.html
+++ b/apps/tool/templates/tool/base64.html
@@ -37,6 +37,7 @@
     <div class="input-group mb-3">
         <textarea class="form-control" id="output_text" rows="10" readonly placeholder="编码或解码结果显示在此"></textarea>
     </div>
+    <p class="small">注：默认编码格式为 UTF-8</p>
 
 {% endblock %}
 
