feat: 新增健身模型，记录五公里数据

--- a/apps/blog/templates/blog/health.html
+++ b/apps/blog/templates/blog/health.html
@@ -159,7 +159,8 @@
                     },
                     grid,
                     yAxis: {
-                        type: 'value'
+                        type: 'value',
+                        max: 1
                     },
                     xAxis: {
                         type: 'category',
